changed some colors

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+:root {
+  --primaryColor: blueviolet;
+  --secondaryColor: rgb(44, 44, 44);
+  --white: white;
+  --heading: rgb(66, 66, 66);
+  --chatBG: rgba(193, 193, 193, 0.164);
+  --lightest: rgba(128, 128, 128, 0.308);
+
+  --text: grey;
+  --background: rgba(137, 43, 226, 0.105);
+  --secondaryBG: rgb(243, 243, 243);
+  --color: rgb(48, 48, 48);
+  --cardColor: rgb(252, 252, 252);
+  --glassBG: rgba(255, 255, 255, 0.505);
+  --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  --hoverShadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+    rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
+  --btnBG: blueviolet;
+  --btnText: grey;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,22 +34,14 @@ body {
   font-family: "Inter", sans-serif;
   /* background-image: url("https://images.unsplash.com/photo-1464618663641-bbdd760ae84a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"); */
 
-  background-image: url("https://images.unsplash.com/photo-1620207418302-439b387441b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1267&q=80");
+  /* background-image: url("https://images.unsplash.com/photo-1620207418302-439b387441b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1267&q=80"); */
 
   /* background-image: url("https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"); */
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   overflow: auto;
-}
-
-#primary {
-  /* --primary-color: #202124; */
-  --primary-color: #ffffff3b;
-  --secondary-color: black;
-  /* background: #202124; */
-  --shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background: var(--background);
 }
 
 #root {
