--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -33,14 +33,15 @@
 }
 
 .leftSide.collapsed {
-  width: 65px;
-  border-radius: 0 40px 40px 0;
+  width: 60px;
+  border-radius: 20px;
+  margin-left: 10px;
 }
 
 .leftSide.Uncollapsed {
   width: 277px;
-  border-bottom-right-radius: 40px;
-  border-top-right-radius: 40px;
+  margin-left: 10px;
+  border-radius: 30px;
 }
 
 .dashboardContainer .leftSide::-webkit-scrollbar {
@@ -90,7 +91,7 @@
   transition: 200ms ease-in-out;
 }
 
-.collapsed>.closeSideBarBtn {
+.collapsed > .closeSideBarBtn {
   display: none !important;
 }
 
@@ -110,7 +111,7 @@
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu {
+.dashboardContainer .leftSide .navMenu > a.menu {
   width: 100%;
   height: 64px;
   text-decoration: none;
@@ -122,19 +123,19 @@
   color: var(--text);
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu span {
+.dashboardContainer .leftSide .navMenu > a.menu span {
   color: var(--text);
   font-weight: 500;
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu:hover {
+.dashboardContainer .leftSide .navMenu > a.menu:hover {
   background: var(--primaryColor);
   transition: 200ms ease-in;
   color: white;
   border-radius: 0 50px 50px 0;
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu:hover span {
+.dashboardContainer .leftSide .navMenu > a.menu:hover span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -144,12 +145,12 @@
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu.active .menuIcon {
+.dashboardContainer .leftSide .navMenu > a.menu.active .menuIcon {
   color: var(--primaryColor);
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu:hover .menuIcon>i,
-.dashboardContainer .leftSide .navMenu>a.menu.active .menuIcon>i {
+.dashboardContainer .leftSide .navMenu > a.menu:hover .menuIcon > i,
+.dashboardContainer .leftSide .navMenu > a.menu.active .menuIcon > i {
   color: white !important;
 }
 
@@ -158,7 +159,7 @@
   margin-right: 1.5rem;
 }
 
-.dashboardContainer .leftSide .navMenu>a.menu>.menuIcon img {
+.dashboardContainer .leftSide .navMenu > a.menu > .menuIcon img {
   width: 100%;
 }
 
@@ -166,14 +167,14 @@
   background: #5cc1483b;
 } */
 
-.dashboardContainer .leftSide .navMenu>a.active,
-.dashboardContainer .leftSide .navMenu>a:hover {
+.dashboardContainer .leftSide .navMenu > a.active,
+.dashboardContainer .leftSide .navMenu > a:hover {
   background: var(--primaryColor);
   border-radius: 0 50px 50px 0;
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu>a.active span {
+.dashboardContainer .leftSide .navMenu > a.active span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -304,7 +305,7 @@
   backdrop-filter: blur(8px);
 }
 
-.dashHeader>.left {
+.dashHeader > .left {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -314,13 +315,13 @@
   padding: 0 20px;
 }
 
-.dashHeader>.left>.left {
+.dashHeader > .left > .left {
   display: flex;
   align-items: center;
   height: 100%;
 }
 
-.dashHeader>.left>.left>span {
+.dashHeader > .left > .left > span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -329,8 +330,8 @@
   color: var(--primaryColor);
 }
 
-.dashHeader>.left>.left>.icon,
-.dashHeader>.left>.right>.icon {
+.dashHeader > .left > .left > .icon,
+.dashHeader > .left > .right > .icon {
   height: 35px;
   width: 35px;
   cursor: pointer;
@@ -340,22 +341,22 @@
   margin-right: 10px;
 }
 
-.dashHeader>.left>.left>.icon,
-.dashHeader>.left>.right>.icon i {
+.dashHeader > .left > .left > .icon,
+.dashHeader > .left > .right > .icon i {
   color: var(--primaryColor);
 }
 
-.dashHeader>.left>.right>.icon img {
+.dashHeader > .left > .right > .icon img {
   width: 100%;
   height: 100%;
 }
 
-.dashHeader>.left>.left>.icon i {
+.dashHeader > .left > .left > .icon i {
   color: var(--primaryColor);
   font-size: 2rem;
 }
 
-.dashHeader>.left>.right>span {
+.dashHeader > .left > .right > span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -365,7 +366,7 @@
   margin-right: 20px;
 }
 
-.dashHeader>.left>.right {
+.dashHeader > .left > .right {
   display: flex;
   height: 100%;
   align-items: center;
@@ -377,7 +378,7 @@
   cursor: pointer;
 }
 
-.dashHeader>.right {
+.dashHeader > .right {
   display: flex;
   width: 15%;
   padding: 0 20px;
@@ -386,13 +387,13 @@
   height: 100%;
 }
 
-.dashHeader>.right .icon {
+.dashHeader > .right .icon {
   width: 40px;
   height: 40px;
   cursor: pointer;
 }
 
-.dashHeader>.right .icon i {
+.dashHeader > .right .icon i {
   width: 100%;
   height: 100%;
 }
