--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -3,19 +3,45 @@
   display: flex;
   row-gap: 2rem;
   flex-direction: column;
+  height: auto;
+}
+
+.dashboard .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border: 2px solid red;
+  height: 100%;
 }
 
 .dashboard .globe-graph {
   background: var(--primaryColor);
   border-radius: 50px;
-  width: 50%;
+  width: 49%;
   min-height: 250px;
+}
+
+.dashboard .cards {
+  width: 49%;
+  display: flex;
+  justify-content: space-between;
+  align-items: ;
+  flex-wrap: wrap;
+  gap: 1rem;
+  height: 100%;
+}
+
+.dashboard .cards .sm-card {
+  width: calc(49% - 0.5rem);
+  min-height: 150px;
+  box-shadow: var(--shadow);
+  border-radius: 30px;
+  background: white;
 }
 
 .dashboard .globe-graph svg {
   max-height: 400px;
-  margin-top: -30px;
-  margin-bottom: -30px;
 }
 
 .dashboard .mid h4,
