--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -26,7 +26,7 @@
   width: 49%;
   display: flex;
   justify-content: space-between;
-  align-items: ;
+  align-items: start;
   flex-wrap: wrap;
   gap: 1rem;
   height: 100%;
