--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -3,6 +3,8 @@
   padding: 2rem;
   border-radius: 50px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background: var(--white);
+  max-width: 1320px;
 }
 
 
@@ -32,7 +34,7 @@
 }
 
 .adminUserPage>.top>.filter>select {
-  color: white;
+  color: var(--text);
   border: none;
   border-right: 8px solid transparent;
   padding: 10px 15px;
