--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -23,18 +23,17 @@
   z-index: 2;
   background: var(--white);
   height: 99vh;
-  overflow: auto;
   padding-top: 101px;
   padding-bottom: 50px;
   transition: all ease-in-out 0.8s;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  backdrop-filter: blur(10px);
+  overflow: auto;
 }
 
 .leftSide.collapsed {
-  width: 60px;
-  border-radius: 20px;
+  width: 75px;
+  border-radius: 40px;
   margin-left: 10px;
 }
 
@@ -42,6 +41,12 @@
   width: 277px;
   margin-left: 10px;
   border-radius: 30px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 100px;
 }
 
 .dashboardContainer .leftSide::-webkit-scrollbar {
@@ -57,7 +62,6 @@
   top: 0;
   left: 0;
   z-index: 3;
-  width: 277px;
   border-top-right-radius: 20px;
 }
 
@@ -68,7 +72,7 @@
 }
 
 .closeSideBarBtn {
-  position: fixed;
+  position: absolute;
   left: 231px;
   z-index: 10;
   top: 13px;
@@ -91,7 +95,7 @@
   transition: 200ms ease-in-out;
 }
 
-.collapsed > .closeSideBarBtn {
+.collapsed>.closeSideBarBtn {
   display: none !important;
 }
 
@@ -101,9 +105,12 @@
   align-items: flex-start;
   flex-wrap: wrap;
   justify-content: center;
-  width: 277px;
-  overflow: hidden;
+  width: 100%;
   transition: all ease-in-out 0.3s;
+}
+
+.dashboardContainer .leftSide.collapsed .navMenu {
+  align-items: center;
 }
 
 .dashboardContainer .leftSide .navMenu svg {
@@ -111,7 +118,7 @@
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu {
+.dashboardContainer .leftSide .navMenu>a.menu {
   width: 100%;
   height: 64px;
   text-decoration: none;
@@ -124,19 +131,24 @@
   border-radius: 50px;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu span {
+
+.dashboardContainer .leftSide.collapsed .navMenu>a.menu {
+  justify-content: center;
+}
+
+.dashboardContainer .leftSide .navMenu>a.menu span {
   color: var(--text);
   font-weight: 500;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu:hover {
+.dashboardContainer .leftSide .navMenu>a.menu:hover {
   background: var(--primaryColor);
   transition: 200ms ease-in;
   color: white;
   border-radius: 50px;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu:hover span {
+.dashboardContainer .leftSide .navMenu>a.menu:hover span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -146,12 +158,12 @@
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu.active .menuIcon {
+.dashboardContainer .leftSide .navMenu>a.menu.active .menuIcon {
   color: var(--primaryColor);
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu:hover .menuIcon > i,
-.dashboardContainer .leftSide .navMenu > a.menu.active .menuIcon > i {
+.dashboardContainer .leftSide .navMenu>a.menu:hover .menuIcon>i,
+.dashboardContainer .leftSide .navMenu>a.menu.active .menuIcon>i {
   color: white !important;
 }
 
@@ -160,7 +172,7 @@
   margin-right: 1.5rem;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu > .menuIcon img {
+.dashboardContainer .leftSide .navMenu>a.menu>.menuIcon img {
   width: 100%;
 }
 
@@ -168,14 +180,43 @@
   background: #5cc1483b;
 } */
 
-.dashboardContainer .leftSide .navMenu > a.active,
-.dashboardContainer .leftSide .navMenu > a:hover {
+.dashboardContainer .leftSide .navMenu>a.active,
+.dashboardContainer .leftSide .navMenu>a:hover {
   background: var(--primaryColor);
   border-radius: 50px;
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu > a.active span {
+
+.dashboardContainer .leftSide.collapsed .navMenu>a.active,
+.dashboardContainer .leftSide.collapsed .navMenu>a:hover {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.dashboardContainer .leftSide.collapsed .navMenu>a .menuIcon,
+.dashboardContainer .leftSide.collapsed .navMenu .subMenu span .menuIcon {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  padding: 0;
+}
+
+.dashboardContainer .leftSide.collapsed .navMenu>a.active span,
+.dashboardContainer .leftSide.collapsed .navMenu>a span,
+.dashboardContainer .leftSide.collapsed .navMenu>a .arrow,
+.dashboardContainer .leftSide.collapsed .navMenu .subMenu span {
+  display: none;
+}
+
+.dashboardContainer .leftSide .navMenu>a.active span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -216,6 +257,7 @@
   flex-direction: column;
   width: 100%;
   background: var(--background);
+  border-radius: 30px;
   /* box-shadow: rgb(11, 11, 11) 3px 3px 6px 0px inset,
     rgba(53, 53, 53, 0.5) -3px -3px 6px 1px inset; */
 }
@@ -243,8 +285,22 @@
   border-radius: 50px;
 }
 
+.dashboardContainer .leftSide.collapsed .navMenu .subMenu {
+  width: 60px;
+}
+
+
 .dashboardContainer .leftSide.collapsed .navMenu .subMenu a {
-  padding-left: 17px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.dashboardContainer .leftSide.collapsed .navMenu .subMenu a {
   transition: 600ms ease-in-out;
 }
 
@@ -306,23 +362,23 @@
   backdrop-filter: blur(8px);
 }
 
-.dashHeader > .left {
+.dashHeader>.left {
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 100%;
   align-content: center;
   border-right: 2px solid #f1f1f1;
-  padding: 0 20px;
+  padding: 0 35px;
 }
 
-.dashHeader > .left > .left {
+.dashHeader>.left>.left {
   display: flex;
   align-items: center;
   height: 100%;
 }
 
-.dashHeader > .left > .left > span {
+.dashHeader>.left>.left>span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -331,8 +387,8 @@
   color: var(--primaryColor);
 }
 
-.dashHeader > .left > .left > .icon,
-.dashHeader > .left > .right > .icon {
+.dashHeader>.left>.left>.icon,
+.dashHeader>.left>.right>.icon {
   height: 35px;
   width: 35px;
   cursor: pointer;
@@ -342,22 +398,22 @@
   margin-right: 10px;
 }
 
-.dashHeader > .left > .left > .icon,
-.dashHeader > .left > .right > .icon i {
+.dashHeader>.left>.left>.icon,
+.dashHeader>.left>.right>.icon i {
   color: var(--primaryColor);
 }
 
-.dashHeader > .left > .right > .icon img {
+.dashHeader>.left>.right>.icon img {
   width: 100%;
   height: 100%;
 }
 
-.dashHeader > .left > .left > .icon i {
+.dashHeader>.left>.left>.icon i {
   color: var(--primaryColor);
   font-size: 2rem;
 }
 
-.dashHeader > .left > .right > span {
+.dashHeader>.left>.right>span {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -367,7 +423,7 @@
   margin-right: 20px;
 }
 
-.dashHeader > .left > .right {
+.dashHeader>.left>.right {
   display: flex;
   height: 100%;
   align-items: center;
@@ -379,7 +435,7 @@
   cursor: pointer;
 }
 
-.dashHeader > .right {
+.dashHeader>.right {
   display: flex;
   width: 15%;
   padding: 0 20px;
@@ -388,13 +444,13 @@
   height: 100%;
 }
 
-.dashHeader > .right .icon {
+.dashHeader>.right .icon {
   width: 40px;
   height: 40px;
   cursor: pointer;
 }
 
-.dashHeader > .right .icon i {
+.dashHeader>.right .icon i {
   width: 100%;
   height: 100%;
 }
@@ -403,6 +459,8 @@
   padding: 3rem;
   padding-top: 150px;
   min-height: 94vh;
+  display: flex;
+  justify-content: center;
   transition: all ease-in-out 0.6s;
 }
 
