--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,160 +1,213 @@
-.authContainer {
+.signup {
   width: 100%;
-  height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  background-image: url(/public/images/loginBG.png);
+  min-height: calc(100vh - 60px);
 }
 
-.authContainer .box {
-  width: 75%;
-  height: 85%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
-
-.authContainer .backBtn {
-  position: absolute;
-  top: 40px;
-  left: 20px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background: linear-gradient(180deg, #f29924 0%, #f29924 100%);
-  border: 1.07143px solid #ffffff;
-  box-shadow: 0px 4.28571px 4.28571px rgba(0, 0, 0, 0.1);
-}
-
-.authContainer .backBtn:hover {
-  background: linear-gradient(180deg, #ffba61 0%, #ff9100 100%);
-  transition: 200ms ease-in-out;
-}
-
-.authContainer .backBtn:hover img {
-  filter: brightness(0.2);
-}
-
-.authContainer .box .inputField {
-  display: flex;
-  flex-direction: column;
-  width: 533px;
-  margin-top: 1rem;
-  position: relative;
-}
-
-.authContainer .box .inputField .showPasswordBtn {
-  border: none;
-  background: transparent;
-  position: absolute;
-  top: 43px;
-  right: 15px;
-}
-
-.authContainer .box .inputField .showPasswordBtn img {
-  width: 30px;
-  height: 30px;
-}
-
-.authContainer .box h4 {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
+.signup .welcomeText h1 {
+  font-size: 5rem;
   text-transform: capitalize;
-  color: #f29924;
-  margin-top: 1rem;
+  line-height: 4.2rem;
+  color: var(--primaryColor);
+  font-weight: 900;
 }
 
-.authContainer .box span.heading-desc {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
+.signup .welcomeText p {
+  color: var(--primaryColor);
+  font-size: 1.5rem;
+  margin-top: -5px;
   text-align: center;
-  text-transform: capitalize;
-  color: #000000;
-  margin-bottom: 2rem;
 }
 
-.authContainer .box .inputField label {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
+.signup h1 {
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  color: var(--primaryColor);
   text-transform: capitalize;
-  color: #000000;
+  font-weight: 600;
 }
 
-.authContainer .box .inputField input {
-  height: 56px;
-  border: 1px solid #24903c;
-  border-radius: 10px;
-  padding: 10px;
-  outline: none;
-  padding-right: 3rem;
+.signup form {
+  width: 40%;
+  max-width: 600px;
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  background: var(--white);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  align-items: flex-start;
+  max-height: 70vh;
+  overflow: auto;
 
-  /* Font Style */
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  color: rgba(242, 153, 36, 0.4);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.authContainer .box .inputField input[type="submit"] {
-  background: #f29924;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  height: 56px;
-  cursor: pointer;
-  /* font style  */
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  text-transform: capitalize;
-  color: #ffffff;
+.signup form::-webkit-scrollbar {
+  display: none;
+}
+
+.signup .welcomeText {
+  width: 40%;
+  padding: 0;
+  margin: 0;
+}
+
+form .half {
+  width: 45%;
+}
+
+form .full {
+  width: 100%;
+}
+
+form .input-field {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+form .input-field label {
+  color: var(--text);
+  margin-left: 20px;
+}
+
+form .input-field input,
+form .input-field select,
+form .input-field textarea {
+  width: 100%;
   border: none;
+  padding: 15px;
+  border-radius: 30px;
+  background: var(--secondaryBG);
+  outline: none;
+  color: var(--text);
+  outline: none;
 }
 
-.authContainer .box .inputField input[type="submit"]:hover {
-  background: #ffa227;
-  transition: 200ms ease-in;
+form .input-field input:focus,
+form .input-field select:focus,
+form .input-field textarea:focus {
+  background: var(--background);
+  outline: none;
 }
 
-.authContainer .box .forgotPasswordLink {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  margin-top: 1rem;
-  text-transform: capitalize;
-  color: #000000;
+form .input-field input::placeholder {
+  font-size: 1rem;
+  color: var(--lightest);
 }
 
-.authContainer .box .forgotPasswordLink a {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  /* identical to box height */
+form .input-field #password {
+  padding-right: 3.5rem;
+}
+
+.signup form button[type="submit"] {
+  border: none;
+  width: 100%;
+  margin: 0;
+  background: var(--primaryColor);
+  margin-top: 10px;
+  padding: 15px;
+  border-radius: var(--borderRadius);
+  border: 2px solid var(--primaryColor);
+  position: sticky;
+  bottom: 0px;
+}
+
+.signup .showPasswordBtn {
+  all: unset;
+  position: absolute;
+  right: 22px;
+  top: 35px;
+  color: var(--text);
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.signup form button[type="submit"]:hover {
+  background: var(--white);
+}
+
+.signup .bottom-text {
+  font-size: 14px;
+  width: 100%;
+  color: grey;
+  text-align: center;
+}
+
+.signup .bottom-text a {
   text-decoration: none;
-  text-transform: capitalize;
-  color: #f29924;
+  font-weight: 600;
+  color: var(--primaryColor);
+}
+
+.results {
+  width: 100%;
+}
+
+.searchTabs {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
+  padding-top: 1rem;
+}
+
+.searchTabs button {
+  width: 50%;
+}
+
+@media screen and (max-width: 768px) {
+  .signup {
+    flex-direction: column;
+    padding: 0;
+    width: 100%;
+    margin-bottom: 4rem;
+    align-items: center;
+  }
+
+  .signup .welcomeText {
+    width: 100%;
+    padding: 2rem 0;
+    margin: 0;
+  }
+
+  .signup .welcomeText h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+    text-align: center;
+  }
+
+  .signup .welcomeText p {
+    font-size: 1rem;
+    margin-top: 0;
+  }
+
+  .signup h1 {
+    font-size: 1.5rem;
+  }
+
+  .signup form {
+    width: 80%;
+    padding: 1rem;
+    justify-content: center;
+    border-radius: var(--borderRadius);
+  }
+
+  .signup form .half {
+    width: 100%;
+  }
+
+  .signup .bottom-text {
+    font-size: 10px;
+  }
+
+  .signup .slider {
+    width: 97%;
+  }
 }
