--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -341,6 +341,10 @@
 .dashboardContainer .rightSide {
   width: 100%;
   padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .dashHeader {
