--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   --hoverShadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
     rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  --borderRadius: 30px;
+  --borderRadius: 2em;
 
   --btnBG: blueviolet;
   --btnText: grey;
