--- a/src/styles/UI.css
+++ b/src/styles/UI.css
@@ -19,7 +19,6 @@
   /* border: 1px solid var(--primaryColor); */
   color: white;
   transition: 300ms ease-in-out;
-
 }
 
 .checkbox--on .checkbox__ball {
@@ -54,13 +53,13 @@
   flex-wrap: wrap;
 }
 
-.pagination>button {
+.pagination > button {
   border: none;
   background: transparent;
   height: 45px;
 }
 
-.pagination>button.pageBtn {
+.pagination > button.pageBtn {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -69,7 +68,7 @@
   border: 1px solid #dfdfdf;
   border-radius: 0px;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -77,16 +76,16 @@
   color: var(--primary-color);
 }
 
-.pagination>button.pageBtn:hover,
-.pagination>button.prev:hover,
-.pagination>button.next:hover {
+.pagination > button.pageBtn:hover,
+.pagination > button.prev:hover,
+.pagination > button.next:hover {
   background: var(--primary-color);
   border: 1px solid #dfdfdf;
   transition: 200ms ease-in-out;
   color: #ffffff;
 }
 
-.pagination>button.activeBtn {
+.pagination > button.activeBtn {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -95,7 +94,7 @@
   border: 1px solid #dfdfdf;
   border-radius: 0px;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -103,7 +102,7 @@
   color: #ffffff;
 }
 
-.pagination>button.prev {
+.pagination > button.prev {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -114,7 +113,7 @@
   height: 45px;
 }
 
-.pagination>button.next {
+.pagination > button.next {
   display: flex;
   align-items: center;
   padding: 12px 30px;
@@ -133,19 +132,23 @@
   padding: 0;
 }
 
-.menuControls>li {
+.menuControls > li {
   padding: 15px 15px;
-  overflow: hidden;
   color: grey;
   font-weight: 500;
   font-size: 16px;
-  font-family: 'Poppins', sans-serif;
+  min-width: 200px;
+  font-family: "Poppins", sans-serif;
   border-bottom: 1px solid rgba(128, 128, 128, 0.082);
 }
 
-.menuControls>li:hover {
+.menuControls > li:hover {
   background: whitesmoke;
   cursor: pointer;
-  color: #58bd43;
+  color: var(--primaryColor);
   transition: 200ms ease-in;
+}
+
+.menuControls > li i {
+  margin-right: 5px;
 }
